fix: row-gap todos-list increase

--- a/src/main.css
+++ b/src/main.css
@@ -824,7 +824,7 @@ h6 {
   width: 100%;
   display: grid;
   justify-content: center;
-  gap: 1.2rem;
+  row-gap: 4em;
   grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   padding: 2rem 0.5rem 1.3rem 4rem;
 }
